--- a/demo/partials/main.html
+++ b/demo/partials/main.html
@@ -34,16 +34,22 @@
 </section>
 
 <section>
-  <h1>Final Product: Facebook Login Button</h1>
+  <h1>Facebook Login Button</h1>
 
-  <pre class='marginTop'>&lt;facebook-login firebase='https://davidchang.firebaseio.com/credentials' show-configure='true'&gt;&lt;/facebook-login&gt;</pre>
+  <pre class='marginTop'>&lt;facebook-login&gt;&lt;/facebook-login&gt;</pre>
 
   <facebook-login show-configure='true'></facebook-login>
 
-  <h3 ng-show='facebookResponse.status == "connected"'>Hello, {{loggedInUser.name}}!</h3>
-  <h3 ng-hide='facebookResponse.status == "connected"'>Hello, Stranger!</h3>
+  <div ng-show='facebookResponse.status == "connected"'>
+    <h3>Hello, {{loggedInUser.name}}!</h3>
+    <h3>If you visit <a href='#/private'>#/private</a>, you will see a dump of your JSON data</h3>
+  </div>
 
-  <div>See More <a href='#/loginButton'>Details</a>.</div>
+  <div ng-hide='facebookResponse.status == "connected"'>
+    <h3>Hello, Stranger!</h3>
+    <h3>If you visit <a href='#/private'>#/private</a>, you should get redirected back here, since you're not logged in</h3>
+  </div>
+
 </section>
 
 <section>
@@ -51,6 +57,166 @@
   <a href='https://github.com/davidchang/angular-facebook-utils'>https://github.com/davidchang/angular-facebook-utils</a>
 </section>
 
+<section>
+  <h1>Non-Firebase Usage:</h1>
+  <ol>
+    <li><code>bower install angular-facebook-utils</code></li>
+    <li>
+      <div>Include facebookUtils.min.js:</div>
+      <pre class='marginTop'>&lt;script src="bower_components/angular-facebook-utils/src/facebookUtils.min.js&gt;&lt;/script&gt;</pre>
+    </li>
+    <li>
+      <div>Add the <code>facebookUtils</code> module as a dependency of your Angular application and set your appID:</div>
+      <pre class='marginTop'>
+angular.module('yourModule', ['facebookUtils'])
+  .value('facebookConfigSettings', {
+    'appID' : '335763733225618'
+  });</pre>
+    </li>
+    <li>
+      Add <code>&lt;facebook-login&gt;&lt;/facebook-login&gt;</code> somewhere in your code
+    </li>
+    <li>Run your server</li>
+  </ol>
+</section>
+
+<section>
+  <h1>Firebase Usage</h1>
+  <ol>
+    <li><code>bower install angular-facebook-utils</code></li>
+    <li>
+      <div>Include facebookUtilsFirebase.min.js</div>
+      <pre class='marginTop'>&lt;script src="bower_components/angular-facebook-utils/src/facebookUtilsFirebase.min.js&gt;&lt;/script&gt;</pre>
+    </li>
+    <li>
+      <div>Add the <code>facebookUtils</code> module as a dependency of your Angular application and set your firebase URL:</div>
+      <pre class='marginTop'>
+angular.module('yourModule', ['facebookUtils'])
+  .value('facebookConfigSettings', {
+    'firebaseURL' : 'https://your-account.firebaseio.com/collection-name'
+  });</pre>
+    </li>
+    <li>Run your server</li>
+    <li>
+      Add <code>&lt;facebook-login&gt;&lt;/facebook-login&gt;</code> somewhere in your code
+    </li>
+    <li>Click the login button and it will give you configuration instructions</li>
+  </ol>
+</section>
+
+<section>
+  <h1>Configuration Options</h1>
+  <table class='table table-striped'>
+    <thead>
+      <tr><th>Object Key</th><th>Default</th><th>Description</th></tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>firebaseURL</td>
+        <td>''</td>
+        <td>Your firebase URL</td>
+      </tr>
+      <tr>
+        <td>appID</td>
+        <td>''</td>
+        <td>Your Facebook ID (required if Firebase is disabled)</td>
+      </tr>
+      <tr>
+        <td>permissions</td>
+        <td>''</td>
+        <td>Comma separated String for the Facebook permissions you want to request</td>
+      </tr>
+      <tr>
+        <td>channelFile</td>
+        <td>'bower_components/angular-facebook-utils/channel.html'</td>
+        <td>The filepath to your channel file</td>
+      </tr>
+
+      <tr>
+        <td>routingEnabled</td>
+        <td>false</td>
+        <td>Whether or not to enforce Facebook authentication to view routes with <code>'needAuth' : true</code></td>
+      </tr>
+
+      <tr>
+        <td>loginPath</td>
+        <td>'/'</td>
+        <td>Where to be redirected when not logged in</td>
+      </tr>
+    </tbody>
+  </table>
+  <div>Note: If you want to show the configuration modal to see the instructions or change your appID, you can add the show-configure attribute to your facebook-login attribute, like so: <code>&lt;facebook-login show-configure='true'&gt;&lt;facebook-login&gt;</code></div>
+</section>
+
+
+<section>
+  <h1>Example Code</h1>
+  <section>
+    <div>This example will:
+      <ul>
+        <li>use the specified Firebase URL</li>
+        <li>request user_photos and user_likes permissions</li>
+        <li>use the channel file at channel.html</li>
+        <li>pop up a configuration modal that will allow you to change your app ID</li>
+      </ul>
+      It will also enforce Facebook authentication for your routes with <code>'needAuth' : true</code> in their route data and redirect back to loginPath if they are trying to view a private page and are not logged in.
+    </div>
+    <pre class='marginTop'>
+angular.module('yourModule', ['facebookUtils'])
+  .value('facebookConfigSettings', {
+    'firebaseURL' : 'https://your-account.firebaseio.com/collection-name',
+    'permissions' : 'user_photos,user_likes',
+    'showConfigure' : true,
+    'channelFile' : 'channel.html',
+    'routingEnabled' : true,
+    'loginPath' : '/'
+  })
+  .config(function($routeProvider) {
+    $routeProvider.when('/', {
+      templateUrl: 'demo/partials/login.html',
+      controller: 'loginCtrl'
+    })
+    .when('/private', {
+      templateUrl: 'demo/partials/private.html',
+      controller: 'privateCtrl',
+      needAuth: true
+    })
+    .otherwise({ redirectTo: '/' });
+  });</pre>
+  </section>
+</section>
+
+<section>
+  <h1>Events</h1>
+  <div>Changes in log in status are broadcasted on the root scope along with corresponding data; so you'll just want to set up <code>$scope.$on('event name, like fbLoginSuccess')</code> listeners in your various controllers.
+  <table class='table table-striped'>
+    <thead>
+      <tr><th>Event Name</th><th>Description</th></tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>fbStatusChange</td>
+        <td>Change in status</td>
+      </tr>
+      <tr>
+        <td>fbLoginSuccess</td>
+        <td>Successfully logged in (will contain a userNotAuthorized property if the user did not authorize permissions</td>
+      </tr>
+      <tr>
+        <td>fbLoginFailure</td>
+        <td>Tried to log in, but an error occurred</td>
+      </tr>
+      <tr>
+        <td>fbLogoutSuccess</td>
+        <td>Successfully logged out</td>
+      </tr>
+      <tr>
+        <td>fbLogoutFailure</td>
+        <td>Tried to log out, but an error occurred</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
 
 <section>
   <h1>Me</h1>
