--- a/demo/partials/private.html
+++ b/demo/partials/private.html
@@ -1,4 +1,8 @@
-<facebook-login></facebook-login>
+<a href='#/'>Go Back to Main Page</a>
+
+<section class='marginTop'>
+  <facebook-login></facebook-login>
+</section>
 
 <section>
   <h1>You should be logged in to view this route!</h1>
@@ -7,6 +11,6 @@
 <section>
   <h2>Data Dump of logged in user:</h2>
   <pre>
-    {{dataDump}}
+    {{loggedInUser | json}}
   </pre>
 </section>
