--- a/src/views/facebookLoginPartial.html
+++ b/src/views/facebookLoginPartial.html
@@ -1,6 +1,7 @@
 <div id="facebookLogin">
   <style>
     .marginTop {margin-top: 10px;}
+    .modal.show {display: block;}
     .btn-auth,.btn-auth:visited{position:relative;display:inline-block;height:22px;padding:0 1em;border:1px solid #999;border-radius:2px;margin:0;text-align:center;text-decoration:none;font-size:14px;line-height:22px;white-space:nowrap;cursor:pointer;color:#222;background:#fff;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-appearance:none;*overflow:visible;*display:inline;*zoom:1}.btn-auth:hover,.btn-auth:focus,.btn-auth:active{color:#222;text-decoration:none}.btn-auth:before{content:"";float:left;width:22px;height:22px;background:url(http://necolas.github.io/css3-social-signin-buttons/auth-icons.png) no-repeat 99px 99px}.btn-auth.large{height:36px;line-height:36px;font-size:20px}.btn-auth.large:before{width:36px;height:36px}.btn-auth::-moz-focus-inner{border:0;padding:0}.btn-facebook,.btn-facebook:visited{border-color:#29447e;border-bottom-color:#1a356e;color:#fff;background-color:#5872a7;background-image:-webkit-gradient(linear,0 0,0 100%,from(#637bad),to(#5872a7));background-image:-webkit-linear-gradient(#637bad,#5872a7);background-image:-moz-linear-gradient(#637bad,#5872a7);background-image:-ms-linear-gradient(#637bad,#5872a7);background-image:-o-linear-gradient(#637bad,#5872a7);background-image:linear-gradient(#637bad,#5872a7);-webkit-box-shadow:inset 0 1px 0 #879ac0;box-shadow:inset 0 1px 0 #879ac0}.btn-facebook:hover,.btn-facebook:focus{color:#fff;background-color:#3b5998}.btn-facebook:active{color:#fff;background:#4f6aa3;-webkit-box-shadow:inset 0 1px 0 #45619d;box-shadow:inset 0 1px 0 #45619d}.btn-facebook:before{border-right:1px solid #465f94;margin:0 1em 0 -1em;background-position:0 0}.btn-facebook.large:before{background-position:0 -22px}
   </style>
 
@@ -12,6 +13,40 @@
       Sign out
     </span>
   </a>
+
+  <!-- Modal -->
+  <div class="modal" ng-class="{fade: !showConfigure, show: showConfigure}">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" ng-click="showConfigure = false">&times;</button>
+          <h4 class="modal-title">Configure Facebook Login</h4>
+        </div>
+        <div class="modal-body">
+          <div>
+            First, you'll need to register your app on Facebook. Follow these steps:
+          </div>
+          <ol class="marginTop">
+            <li>Visit <a href="https://developers.facebook.com/apps" target="_blank">https://developers.facebook.com/apps</a></li>
+            <li>Create New App (Only a name is required.)</li>
+            <li>Set "Sandbox Mode" to "Disabled"</li>
+            <li>Under "Select how your app integrates with Facebook", expand "Website with Facebook Login".</li>
+            <li>Set Site URL to: <span ng-bind="configureLocation">http://localhost:3000/</span></li>
+          </ol>
+          <div>
+            Now, set your App ID in your code.
+          </div>
+          <div><code>
+
+          </code></div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" ng-click="showConfigure = false">High Five</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
   <div id="fb-root"></div>
 </div>
