non firebase version verified

--- a/demo/partials/main.html
+++ b/demo/partials/main.html
@@ -35,7 +35,7 @@
 <section>
   <h1>Login Button</h1>
 
-  <pre class='marginTop'>&lt;facebook-login&gt;&lt;/facebook-login&gt;</pre>
+  <pre class='marginTop'>&lt;facebook-login show-configure="true"&gt;&lt;/facebook-login&gt;</pre>
 
   <facebook-login show-configure='true'></facebook-login>
 
