--- a/demo/partials/private.html
+++ b/demo/partials/private.html
@@ -1,11 +1,7 @@
 <a href='#/'>Go Back to Main Page</a>
 
 <section class='marginTop'>
-  <facebook-login></facebook-login>
-</section>
-
-<section>
-  <h1>You should be logged in to view this route!</h1>
+  <h1>You must be logged in to view this route!</h1>
 </section>
 
 <section>
