updating demo, removing the login button from the ng-view

--- a/demo/partials/private.html
+++ b/demo/partials/private.html
@@ -1,7 +1,5 @@
-<a href='#/'>Go Back to Main Page</a>
-
 <section class='marginTop'>
-  <h1>You must be logged in to view this route!</h1>
+  <h1>Only logged in users will see this route.</h1>
 </section>
 
 <section>
