--- a/demo/partials/main.html
+++ b/demo/partials/main.html
@@ -10,8 +10,8 @@
 </style>
 
 <section>
-  <h1>Angular Facebook Utils (1.1)</h1>
-  <p>1.1 is compatible with Angular 1.2.</p>
+  <h1>Angular Facebook Utils</h1>
+  <p>Login Button directive and Authenticated Routing out of the box. Built for Angular 1.2.</p>
 </section>
 
 <section>
@@ -25,7 +25,7 @@
 
 <section>
   <h1>Installation</h1>
-  <ol>
+  <ol class="margin-top">
     <li><code>bower install angular-facebook-utils</code></li>
     <li>
       <div>Include facebookUtilsFirebase.min.js</div>
@@ -36,7 +36,7 @@
 
 <section>
   <h1>Login Button - Usage</h1>
-  <ol>
+  <ol class="margin-top">
     <li>
       <p>Declare 'facebookUtils' as a dependency</p>
       <pre class='marginTop'>
@@ -83,7 +83,6 @@ $rootScope.$on('fbLogoutSuccess', function() {
 <section>
   <h1>Authenticated Routing - Usage</h1>
 
-
   <div ng-show='loggedInUser.name'>
     <div class='marginTop'>If you visit <a href='#/private'>#/private</a>, you will see a dump of your JSON data</div>
   </div>
@@ -92,7 +91,7 @@ $rootScope.$on('fbLogoutSuccess', function() {
     <div class='marginTop'>If you visit <a href='#/private'>#/private</a>, you should get redirected back here, since you're not logged in</div>
   </div>
 
-  <ol>
+  <ol class="margin-top">
     <li>
       <p>Declare 'facebookUtils' (and 'ngRoute', since you want routing) as a dependency</p>
       <pre class='marginTop'>
@@ -170,7 +169,7 @@ angular.module('facebookUtilsDemo', ['facebookUtils', 'ngRoute'])
 
 <section>
   <h1>Events</h1>
-  <div>Changes in log in status are broadcasted on the root scope along with corresponding data; so you'll just want to set up <code>$scope.$on('event name, like fbLoginSuccess')</code> listeners in your various controllers.
+  <div>Changes in log in status are broadcasted on the root scope along with corresponding data; so you'll just want to set up <code>$scope.$on('eventName')</code> listeners in your various controllers.
   <table class='table table-striped'>
     <thead>
       <tr><th>Event Name</th><th>Description</th></tr>
